--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
         "livewire/livewire": "^2.5",
+        "realrashid/sweet-alert": "^4.1",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
