--- a/package.json
+++ b/package.json
@@ -35,5 +35,10 @@
         "tailwindcss": "^2.2.2",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
+    },
+    "dependencies": {
+        "from": "^0.1.7",
+        "sweetalert": "^2.1.2",
+        "sweetalert2": "^11.3.0"
     }
 }
