--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
         "@inertiajs/inertia": "^0.10.0",
         "@inertiajs/inertia-vue3": "^0.5.1",
         "@inertiajs/progress": "^0.2.6",
+        "@popperjs/core": "^2.10.2",
         "@tailwindcss/forms": "^0.3.1",
         "@tailwindcss/typography": "^0.4.0",
         "@vue/compiler-sfc": "^3.0.5",
         "alpinejs": "^3.0.6",
         "autoprefixer": "^10.2.4",
         "axios": "^0.21",
-        "bootstrap": "^4.6.0",
+        "bootstrap": "^5.1.3",
         "jquery": "^3.6",
         "laravel-mix": "^6.0.39",
         "lodash": "^4.17.19",
